--- a/fcc-test-suite-template-master/index.html
+++ b/fcc-test-suite-template-master/index.html
@@ -23,7 +23,7 @@
     -->
     <script  src="js/index.js"></script>
 
-    <nav id="navbar" class="nav">
+    <nav id="navbar">
       <ul class="nav-list">
         <li>
           <a href="#welcome-section">About</a>
@@ -75,7 +75,7 @@
       />
       <p class="project-title">
         <span class="code">&lt;</span>
-        Technical documentation
+        Technical document page
         <span class="code">&#47;&gt;</span>
       </p>
     </a>
@@ -90,11 +90,8 @@
         </div>
         <a
         id="profile-link"
-        href="https://github.com/freecodecamp"
-        target="_blank"
-        class="btn contact-details"
-        ><i class="fab fa-github"></i> GitHub</a
-      >
+        href="https://github.com/nedith"
+        target="_blank"> GitHub</a>
     </div>
   </section>
   </body>
